--- a/PP2_iteracion1/src/main/java/properties/archivo.properties
+++ b/PP2_iteracion1/src/main/java/properties/archivo.properties
@@ -1,7 +1,7 @@
 #Escribiendo
-#Sun Jun 04 13:45:57 ART 2017
+#Mon Jun 05 19:41:10 ART 2017
 dificultad=facil
 vidas=1
 enemigos=0
-juego=pacman
+juego=Bomberman
 nivel=1
