--- a/PP2_iteracion1/libreria_tiled/org/pom.xml
+++ b/PP2_iteracion1/libreria_tiled/org/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>json-simple-1.1.1</groupId>
+  <groupId>org</groupId>
   <artifactId>org</artifactId>
   <version>1</version>
   <name>Archetype - org</name>
