--- a/PP2_iteracion1/pom.xml
+++ b/PP2_iteracion1/pom.xml
@@ -27,7 +27,7 @@
     	<version>1</version>
     </dependency>
     <dependency>
-    	<groupId>json-simple-1.1.1</groupId>
+    	<groupId>org</groupId>
     	<artifactId>org</artifactId>
     	<version>1</version>
     </dependency>
