--- a/PP2_iteracion1/pom.xml
+++ b/PP2_iteracion1/pom.xml
@@ -27,8 +27,8 @@
     	<version>1</version>
     </dependency>
     <dependency>
-    	<groupId>org</groupId>
-    	<artifactId>org</artifactId>
+    	<groupId>org.json.simple</groupId>
+    	<artifactId>json-simple-1.1.1</artifactId>
     	<version>1</version>
     </dependency>
   </dependencies>
