--- a/PP2_iteracion1/src/main/java/properties/archivo.properties
+++ b/PP2_iteracion1/src/main/java/properties/archivo.properties
@@ -1,7 +1,7 @@
 #Escribiendo
-#Mon Jun 05 19:41:10 ART 2017
+#Fri Jun 09 00:47:44 ART 2017
 dificultad=facil
 vidas=1
+juego=pacman
 enemigos=0
-juego=Bomberman
 nivel=1
