--- a/PP2_iteracion1/pom.xml
+++ b/PP2_iteracion1/pom.xml
@@ -26,12 +26,25 @@
     	<artifactId>entorno</artifactId>
     	<version>1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+	<dependency>
+    	<groupId>com.googlecode.json-simple</groupId>
+    	<artifactId>json-simple</artifactId>
+    	<version>1.1.1</version>
+	</dependency>
+    
   </dependencies>
   
   <build>
     
         <plugins>
-           
+            <plugin>
+        		<artifactId>maven-compiler-plugin</artifactId>
+        		<configuration>
+            		<source>1.7</source>
+            		<target>1.7</target>
+        		</configuration>
+    		</plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
