--- a/PP2_iteracion1/src/main/java/properties/archivo.properties
+++ b/PP2_iteracion1/src/main/java/properties/archivo.properties
@@ -1,7 +1,7 @@
 #Escribiendo
-#Sat Jun 10 15:20:24 ART 2017
+#Fri Jun 23 13:58:16 ART 2017
 dificultad=facil
 vidas=1
 enemigos=0
-juego=Bomberman
+juego=pacman
 nivel=1
