--- a/PP2_iteracion1/src/main/java/properties/archivo.properties
+++ b/PP2_iteracion1/src/main/java/properties/archivo.properties
@@ -1,7 +1,7 @@
 #Escribiendo
-#Fri Jun 23 13:58:16 ART 2017
+#Mon Jun 26 16:06:49 ART 2017
 dificultad=facil
 vidas=1
-enemigos=0
-juego=pacman
-nivel=1
+enemigos=2
+juego=tank
+nivel=2
