--- a/PP2_iteracion1/src/main/java/properties/archivo.properties
+++ b/PP2_iteracion1/src/main/java/properties/archivo.properties
@@ -1,7 +1,7 @@
 #Escribiendo
-#Thu Jul 06 13:26:54 ART 2017
-dificultad=facil
-vidas=1
+#Thu Jul 06 15:29:43 ART 2017
+dificultad=intermedio
+vidas=2
 juego=tank
-enemigos=2
+enemigos=4
 nivel=2
