--- a/PP2_iteracion1/src/main/java/properties/archivo.properties
+++ b/PP2_iteracion1/src/main/java/properties/archivo.properties
@@ -1,7 +1,7 @@
 #Escribiendo
-#Thu Jul 06 15:29:43 ART 2017
-dificultad=intermedio
-vidas=2
+#Wed Jul 12 18:14:52 ART 2017
+dificultad=facil
+vidas=1
+enemigos=2
 juego=tank
-enemigos=4
 nivel=2
