--- a/PP2_iteracion1/src/main/java/properties/archivo.properties
+++ b/PP2_iteracion1/src/main/java/properties/archivo.properties
@@ -1,7 +1,7 @@
 #Escribiendo
-#Wed Jul 12 18:14:52 ART 2017
+#Thu Jul 13 19:24:19 ART 2017
 dificultad=facil
 vidas=1
-enemigos=2
-juego=tank
-nivel=2
+juego=Bomberman
+enemigos=0
+nivel=1
