--- a/PP2_iteracion1/src/main/java/properties/archivo.properties
+++ b/PP2_iteracion1/src/main/java/properties/archivo.properties
@@ -1,7 +1,7 @@
 #Escribiendo
-#Thu Jul 13 19:24:19 ART 2017
+#Thu Jul 13 19:44:26 ART 2017
 dificultad=facil
 vidas=1
-juego=Bomberman
+juego=pacman
 enemigos=0
 nivel=1
