--- a/PP2_iteracion1/src/main/java/properties/archivo.properties
+++ b/PP2_iteracion1/src/main/java/properties/archivo.properties
@@ -1,7 +1,7 @@
 #Escribiendo
-#Tue Jul 18 19:54:19 ART 2017
+#Tue Jul 18 19:58:00 ART 2017
 dificultad=facil
 vidas=1
-enemigos=0
-juego=pacman
-nivel=1
+juego=tank
+enemigos=2
+nivel=2
