--- a/PP2_iteracion1/.classpath
+++ b/PP2_iteracion1/.classpath
@@ -27,5 +27,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="librerias/entorno.jar"/>
 	<classpathentry kind="lib" path="librerias/json-simple-1.1.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
