--- a/PP2_iteracion1/src/main/java/properties/archivo.properties
+++ b/PP2_iteracion1/src/main/java/properties/archivo.properties
@@ -1,7 +1,7 @@
 #Escribiendo
-#Wed Jul 26 04:24:13 ART 2017
+#Thu Jul 27 18:54:58 ART 2017
 dificultad=facil
 vidas=1
-enemigos=2
-juego=tank
+juego=Bomberman
+enemigos=0
 nivel=1
