--- a/PP2_iteracion1/src/main/java/properties/archivo.properties
+++ b/PP2_iteracion1/src/main/java/properties/archivo.properties
@@ -1,7 +1,7 @@
 #Escribiendo
-#Sat Jul 29 19:54:23 ART 2017
+#Sat Jul 29 20:21:44 ART 2017
 dificultad=facil
-vidas=1
-juego=Bomberman
-enemigos=0
+vidas=2
+enemigos=3
+juego=tank
 nivel=1
